--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/edsgerlin/ask-aircon-lambda#readme",
   "dependencies": {
-    "ask-sdk": "2.0.6"
+    "ask-sdk": "2.0.6",
+    "request": "2.87.0"
   }
 }
